--- a/views/partials/main-nav.pug
+++ b/views/partials/main-nav.pug
@@ -7,14 +7,22 @@ nav.navbar.fixed-top.navbar-expand-lg.navbar-light.bg-light
     ul.navbar-nav.mr-auto
       li.nav-item
         a.nav-link(href='/') Home
-    if !isAuthenticated    
       li.nav-item
-        a.nav-link(href='/authors/new') Register
-      li.nav-item
-        a.nav-link(href='/login') Login 
-    if isAuthenticated    
-      li.nav-item
-      form.nav-destroy(action=`/logout`, method="POST")
-        input(type='submit', value="Logout")  
-      li.nav-item
-        a.nav-link(href='/contact') Contact
+        a.nav-link(href='/about') About
+      if isAuthenticated  
+        li.nav-item.dropdown
+          a.nav-link.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false') Blogs
+          .dropdown-menu
+            a.dropdown-item(href='/users') Profiles
+            a.dropdown-item(href='/conversations/') Conversations
+            a.dropdown-item(href='/blogs/users') Contacts
+            a.dropdown-item(href='/messages/new') +
+      if !isAuthenticated    
+        li.nav-item
+          a.nav-link(href='/users/new') Register
+        li.nav-item
+          a.nav-link(href='/login') Login 
+      if isAuthenticated    
+        li.nav-item
+        form.nav-destroy(action=`/logout`, method="POST")
+          input(type='submit', value="Logout")  
