--- a/views/users/edit.pug
+++ b/views/users/edit.pug
@@ -3,6 +3,7 @@ extends ../layouts/main.pug
 block content
   .container
     header
+      h1= `Edit ${user.id}`
 
     div
       include ./form.pug
