--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,1 +1,25 @@
 extends ../layouts/main.pug
+block content
+  .container
+    header
+      h1= title
+
+    div
+      table.table.table-striped
+        thead
+          tr
+            th User 
+        
+        tbody
+          each user in users
+            tr
+              td= `${user.firstName} ${user.lastName}`
+              td
+                =user.email
+              td
+                a(href=`/users/${user.id}/edit`) edit
+                = ` | `
+                form.destroy(action=`/users/destroy`, method="POST", onsubmit='return confirm("Are you sure you would like to delete your account?")')
+                  input(type="hidden", name="id", value=`${user.id}`)
+                  input.destroy(type="submit", value="destroy")
+          
