--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -6,4 +6,10 @@ block content
       h1= user.id
 
     div
-      = user.content || "Your Profile is processing"
+      =user.firstName
+    
+    div
+      =user.lastName
+
+    div
+      =user.email
