--- a/views/partials/main-nav.pug
+++ b/views/partials/main-nav.pug
@@ -13,8 +13,9 @@ nav.navbar.fixed-top.navbar-expand-lg.navbar-dark.bg-dark
           a.nav-link.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false') Conversations
           .dropdown-menu
             a.dropdown-item(href='/conversations/') Conversations
-            a.dropdown-item(href='/conversations/new') +
-      li.nav-item      
+            a.dropdown-item(href='/messages/new') +
+      li.nav-item
+      if isAuthenticated      
         a.nav-link(href='/users/') Profile         
       if !isAuthenticated    
         li.nav-item
