--- a/views/messages/ new.pug
+++ b/views/messages/ new.pug
@@ -1,9 +1,9 @@
-extends ../layouts/main.pug
+//- extends ../layouts/main.pug
 
-block content
-  .container
-    header
-      h1 New Conversation
+//- block content
+//-   .container
+//-     header
+//-       h1 New Conversation
 
-    div
-      include ./form.pug
+//-     div
+//-       include ./form.pug
