--- a/views/partials/main-nav.pug
+++ b/views/partials/main-nav.pug
@@ -8,15 +8,13 @@ nav.navbar.fixed-top.navbar-expand-lg.navbar-dark.bg-dark
       li.nav-item
         a.nav-link(href='/') Home
       li.nav-item
-      if isAuthenticated  
-        li.nav-item.dropdown
-          a.nav-link.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false') Conversations
-          .dropdown-menu
-            a.dropdown-item(href='/conversations/') Conversations
-            a.dropdown-item(href='/conversations/new') +
+        a.nav-link(href='/messages/') Message
       li.nav-item
-      if isAuthenticated      
-        a.nav-link(href='/users/') Profile         
+      if isAuthenticated   
+        li.nav-item   
+          a.nav-link(href='/users/') Profile
+        li.nav-item
+          a.nav-link(href='/conversations/') Conversations
       if !isAuthenticated    
         li.nav-item
           a.nav-link(href='/users/new') Register
