Few changes to messages/index

--- a/views/messages/index.pug
+++ b/views/messages/index.pug
@@ -5,14 +5,12 @@ block content
     header
       h1= title
 
-    //- div.user-container
-    //-   p= message.user
-
     div.backdiv
       table.table.table-striped   
         tbody
           each message in conversations
             tr
               td= `${conversation.user.firstName} ${conversation.user.lastName}`
+              td= `${message.id}`
                 
 
