--- a/views/messages/index.pug
+++ b/views/messages/index.pug
@@ -3,13 +3,15 @@ extends ../layouts/main.pug
 block content
   .container
     header
-      h1= title
+      h1.user ChitChat
 
-    div.backdiv
+    div.box
       table.table.table-striped   
         tbody
-          each message in conversations
+          each message in messages
             tr
+              th.text-message
+            tr  
               td= `${conversation.user.firstName} ${conversation.user.lastName}`
               td= `${message.id}`
                 
