--- a/views/messages/index.pug
+++ b/views/messages/index.pug
@@ -14,5 +14,8 @@ block content
             tr  
               td= `${conversation.user.firstName} ${conversation.user.lastName}`
               td= `${message.id}`
+              
+    include ./form.pug
+
                 
 
