--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -36,7 +36,7 @@ body {
 
 .box {
   overflow: auto;
-  height: 500px;
+  height: 400px;
   background-color: rgba(255,255,255,0.75);
   border-radius: 10%;
 }
@@ -100,5 +100,9 @@ body {
 
 .text-message{
   border-color: #0056b3;
+}
+
+.text {
+  margin: 20px;
 }
 
