--- a/views/messages/form.pug
+++ b/views/messages/form.pug
@@ -3,7 +3,7 @@ form(action=(message ? `/messages/update` : "/messages"), method="POST")
     input(type="hidden", name="id", value=user.id)
 
   .form-group.text
-    textarea.form-control(name="conversation[content]")
+    textarea.form-control(name="message[content]")
       = message ? message.content : null
 
   .form-group.text
