--- a/views/messages/index.pug
+++ b/views/messages/index.pug
@@ -8,15 +8,12 @@ block content
     div.box
       table.table.table-striped   
         tbody
-          //each message in messages
           each message in conversation.messages
             tr
               th.text-message= message.content
             tr  
-              td= "USER NAME"
-              // `${conversation.user.firstName} ${conversation.user.lastName}`
-              td= "Message ID"
-              //`${message.id}`
+              td= `${message.user.firstName} ${message.user.lastName}`
+              td= `${message.id}`
               
     include ./form.pug
 
