minor changes to usersController and main nav

--- a/views/partials/main-nav.pug
+++ b/views/partials/main-nav.pug
@@ -12,7 +12,7 @@ nav.navbar.fixed-top.navbar-expand-lg.navbar-dark.bg-dark
       li.nav-item
       if isAuthenticated   
         li.nav-item   
-          a.nav-link(href='/users/edit') Profile
+          a.nav-link(href='/users/show') Profile
         li.nav-item   
           a.nav-link(href='/users/') Contacts  
         li.nav-item
