--- a/views/messages/index.pug
+++ b/views/messages/index.pug
@@ -5,16 +5,21 @@ block content
     header
       h1.user ChitChat
 
-    div.box
-      table.table.table-striped   
+    div.box.left
+      table.table.table-striped.convo  
         tbody
           each message in conversation.messages
+            tr.name-row  
+              td.user-name= `${message.user.firstName} ${message.user.lastName}`
             tr
-              th.text-message= message.content
-            tr  
-              td= `${message.user.firstName} ${message.user.lastName}`
-              td= `${message.id}`
-              
+              td.user-container= message.content
+    div.box.right.bg-dark  
+      table.table.table-striped.user
+        tbody
+          each user in conversation.users
+            tr.name-row  
+              td.user-name.side= `${user.firstName} ${user.lastName}`
+
     include ./form.pug
 
                 
