--- a/views/messages/form.pug
+++ b/views/messages/form.pug
@@ -5,7 +5,7 @@ form(action=(message ? `/messages/update` : "/messages"), method="POST")
   input(type="hidden", name="conversationId", value=conversation.id)
 
   .form-group.text
-    textarea.form-control(name="message[content]")
+    textarea.form-control.message(name="message[content]")
       = message ? message.content : null
 
   .form-group.text
