--- a/views/messages/index.pug
+++ b/views/messages/index.pug
@@ -15,7 +15,11 @@ block content
               td.user-container= message.content
             tr  
               td
-                a(href=`/messages/${message.id}/edit`) edit
+                a(href=`/messages/${conversation.id}/${message.id}/edit`) edit
+                //form.destroy(action=`/messages/${message.id}/edit`, method="POST")
+                  input(type="hidden", name="message[id]", value=message.id)
+                  input(type="hidden", name="conversation[id]", value=conversation.id)
+                  input(type="submit", value="edit")
                 = ` | `
                 form.destroy(action=`/messages/destroy`, method="POST" onsubmit=`return confirm("Are you sure you want to delete this message?")`)
                   input(type="hidden", name="id", value=message.id)
