--- a/views/messages/index.pug
+++ b/views/messages/index.pug
@@ -9,17 +9,20 @@ block content
       table.table.table-striped.convo  
         tbody
           each message in conversation.messages
-            tr.name-row  
+            tr.message-row  
               td.user-name= `${message.user.firstName} ${message.user.lastName}`
             tr
               td.user-container= message.content
-            tr  
-              td
-                a(href=`/messages/${message.id}/edit`) edit
-                = ` | `
-                form.destroy(action=`/messages/destroy`, method="POST" onsubmit=`return confirm("Are you sure you want to delete this message?")`)
-                  input(type="hidden", name="id", value=message.id)
-                  input(type="submit", value="delete")
+            tr.message-row   
+              td.convo-buttons
+                div.menu
+                div.menu
+                div.menu
+                  a(href=`/messages/${message.id}/edit`) edit
+                  = ` | `
+                  form.destroy(action=`/messages/destroy`, method="POST" onsubmit=`return confirm("Are you sure you want to delete this message?")`)
+                    input(type="hidden", name="id", value=message.id)
+                    input(type="submit", value="delete")
     div.box.right.bg-dark  
       table.table.table-striped.user
         thead
@@ -27,7 +30,7 @@ block content
             th.chatter Chatter Participants
         tbody
           each user in conversation.users
-            tr.name-row  
+            tr.message-row  
               td.user-name.side= `${user.firstName} ${user.lastName}`
 
     include ./form.pug
