--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -122,7 +122,7 @@ a {
   height: auto;
 }
 
-.name-row {
+.message-row {
   background-color: transparent !important;
 }
 
@@ -148,4 +148,15 @@ table th.chatter {
 
 textarea.form-control.message {
   width: 74%;
+}
+
+.convo-buttons {
+  vertical-align: top !important;
+}
+
+div.menu {
+  width: 35px;
+  height: 5px;
+  background-color: black;
+  margin: 6px 0;
 }
