--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -3,7 +3,7 @@ extends ../layouts/main.pug
 block content
   .container
     header
-      h1= user.id
+      h1 Profile 
 
     div
       =user.firstName
@@ -13,3 +13,10 @@ block content
 
     div
       =user.email
+
+    div  
+      a(href=`/users/${user.id}/edit`) edit
+      = ` | `
+      form.destroy(action=`/users/destroy`, method="POST" onsubmit=`return confirm("Are you sure you want to delete your account?")`)
+        input(type="hidden", name="id", value=user.id)
+        input(type="submit", value="delete")  
