--- a/views/messages/index.pug
+++ b/views/messages/index.pug
@@ -13,17 +13,16 @@ block content
               td.user-name= `${message.user.firstName} ${message.user.lastName}`
             tr
               td.user-container= message.content
-            tr.message-row   
-              td.convo-buttons
-                div.menu
-                div.menu
-                div.menu
-                a(href=`/messages/${conversation.id}/${message.id}/edit`) edit
-                = ` | `
-                form.destroy(action=`/messages/destroy`, method="POST" onsubmit=`return confirm("Are you sure you want to delete this message?")`)
-                  input(type="hidden", name="message[id]", value=message.id)
-                  input(type="hidden", name="conversation[id]", value=conversation.id)
-                  input(type="submit", value="delete")
+                ul.nav.flex-column
+                  li.nav-item.dropdown
+                    a.nav-link.dropdown-toggle(data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false") ...
+                    div.dropdown-menu
+                      a(href=`/messages/${conversation.id}/${message.id}/edit`) edit
+                      = ` | `
+                      form.destroy(action=`/messages/destroy`, method="POST" onsubmit=`return confirm("Are you sure you want to delete this message?")`)
+                        input(type="hidden", name="message[id]", value=message.id)
+                        input(type="hidden", name="conversation[id]", value=conversation.id)
+                        input(type="submit", value="delete")
     div.box.right.bg-dark  
       table.table.table-striped.user
         thead
