Step to fixing profile

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -165,3 +165,11 @@ ul.nav.flex-column {
 div.dropdown-menu {
   text-align: center;
 }
+
+td.heading {
+  font-weight: bold;
+}
+
+td.user-info {
+  color: #e1ff90;
+}
