--- a/views/partials/main-nav.pug
+++ b/views/partials/main-nav.pug
@@ -10,7 +10,7 @@ nav.navbar.fixed-top.navbar-expand-lg.navbar-dark.bg-dark
       li.nav-item
       if isAuthenticated   
         li.nav-item   
-          a.nav-link(href='/users/') Profile
+          a.nav-link(href='/users/show') Profile
         li.nav-item   
           a.nav-link(href='/users/') Contacts  
         li.nav-item
